feat: implemented cpu, ram, disc metrics
